RESOLVED FIXED226087
REGRESSION(r256715): XSLTProcessor does not parse script when transforming to document
https://bugs.webkit.org/show_bug.cgi?id=226087
Summary REGRESSION(r256715): XSLTProcessor does not parse script when transforming to...
Sihui Liu
Reported 2021-05-21 09:24:02 PDT
...
Attachments
Patch (4.33 KB, patch)
2021-05-21 11:32 PDT, Sihui Liu
no flags
Patch (4.31 KB, patch)
2021-05-21 17:05 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2021-05-21 11:32:45 PDT
Sihui Liu
Comment 2 2021-05-21 11:33:33 PDT
Sihui Liu
Comment 3 2021-05-21 17:05:01 PDT
EWS
Comment 4 2021-05-24 08:26:47 PDT
Committed r277951 (238078@main): <https://commits.webkit.org/238078@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429368 [details].
Note You need to log in before you can comment on or make changes to this bug.