Cherry-pick r277951. rdar://problem/78875422

REGRESSION(r256715): XSLTProcessor does not parse script when transforming to document
    https://bugs.webkit.org/show_bug.cgi?id=226087

    Reviewed by Darin Adler.

    Source/WebCore:

    Allow JavaScript if context document is null to match old behavior before r256715.

    Test: fast/xsl/xslt-transform-script.html

    * dom/Document.cpp:
    (WebCore::Document::allowsContentJavaScript const):

    LayoutTests:

    * fast/xsl/xslt-transform-script.html: Added.
    * fast/xsl/xslt-transform-script-expected.txt: Added.

    Canonical link: https://commits.webkit.org/238078@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277951 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.516@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@278493 268f45cc-cd09-0410-ab3c-d52691b4dbfc